update to include an oracle jar