@@ -29,6 +29,6 @@ then
 fi
 
 #"$JAVA" -Xmx2048M -jar berkeley-db-builder.jar "$@"
-"$JAVA" -XX:+UseParallelGC -XX:ParallelGCThreads=4 -XX:+AggressiveOpts -XX:+UseCompressedOops -Xms4048M -Xmx22048M -jar berkeley-db-builder.jar "$@"
+"$JAVA" -XX:+UseParallelGC -XX:ParallelGCThreads=4 -XX:+UseCompressedOops -Xms4048M -Xmx22048M -jar berkeley-db-builder.jar "$@"
 
 #end
